<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >
    <Button
            android:id="@+id/rightBtn"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginBottom="10dp"
            android:text="@string/back" />

    <Button
            android:id="@+id/leftBtn"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/save" />
    <CheckBox
        android:id="@+id/cbBoot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/boot" />
    <CheckBox
        android:id="@+id/cbChargeDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cbBoot"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="0dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/no_charge_dialog" />
    <CheckBox
        android:id="@+id/cbCharge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cbChargeDialog"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="0dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/charge_boot" />

   
    <TextView
        android:id="@+id/tvDelayTitle"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cbCharge"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/delay_title"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <EditText
        android:id="@+id/etDelay"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvDelayTitle"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="0dp"
        android:layout_marginLeft="10dp"
        android:text=""
        android:inputType="number" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/etDelay"
        android:layout_toRightOf="@+id/etDelay"
        android:layout_marginLeft="10dp"
         />
    <TextView
        android:id="@+id/tvReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etDelay"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:text="@string/reset"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    <TextView
        android:id="@+id/tvHelp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvReset"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/help"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    <TextView
        android:id="@+id/tvAbout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvHelp"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:text="@string/about"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>