<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true"
    android:id="@+id/main"    >

    <Button
            android:id="@+id/touchBtn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text=""
            android:background="@android:color/transparent"
            android:visibility="visible" />
   	
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="3"
        android:visibility="visible" >

        <Button
            android:id="@+id/rightBtn"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginBottom="10dp"
            android:text="@string/exit"
            android:alpha="0.6"
            android:visibility="invisible" />

        <Button
            android:id="@+id/leftBtn"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/hide"
            android:alpha="0.6"
            android:visibility="invisible" />

        <Button
            android:id="@+id/midBtn"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginBottom="10dp"
            android:text="@string/settings"
            android:alpha="0.6"
            android:visibility="invisible" />
   	</RelativeLayout>
</LinearLayout>
